@@ -54,6 +54,10 @@
 
 /****************************************************************************/
 
+#if defined(IEEE_FLOATING_POINT_SUPPORT) || defined(M68881_FLOATING_POINT_SUPPORT)
+
+/****************************************************************************/
+
 double
 rint(double x)
 {
@@ -62,5 +66,71 @@ rint(double x)
 
 /****************************************************************************/
 
-#endif /* FLOATING_POINT_SUPPORT */
+#endif /* IEEE_FLOATING_POINT_SUPPORT || M68881_FLOATING_POINT_SUPPORT */
 
+/****************************************************************************/
+
+#if defined(PPC_FLOATING_POINT_SUPPORT)
+
+/****************************************************************************/
+
+static const double
+TWO52[2]={
+  4.50359962737049600000e+15, /* 0x43300000, 0x00000000 */
+ -4.50359962737049600000e+15, /* 0xC3300000, 0x00000000 */
+};
+
+double
+rint(double x)
+{
+	int i0,j0,sx;
+	unsigned i,i1;
+	double w,t;
+	GET_HIGH_WORD(i0,x);
+	sx = (i0>>31)&1;
+	GET_LOW_WORD(i1,x);
+	j0 = ((i0>>20)&0x7ff)-0x3ff;
+	if(j0<20) {
+	    if(j0<0) { 	
+		if(((i0&0x7fffffff)|i1)==0) return x;
+		i1 |= (i0&0x0fffff);
+		i0 &= 0xfffe0000;
+		i0 |= ((i1|-i1)>>12)&0x80000;
+		SET_HIGH_WORD(x,i0);
+	        w = TWO52[sx]+x;
+	        t =  w-TWO52[sx];
+	        GET_HIGH_WORD(i0,t);
+	        SET_HIGH_WORD(t,(i0&0x7fffffff)|(sx<<31));
+	        return t;
+	    } else {
+		i = (0x000fffff)>>j0;
+		if(((i0&i)|i1)==0) return x; /* x is integral */
+		i>>=1;
+		if(((i0&i)|i1)!=0) {
+		    if(j0==19) i1 = 0x40000000; else
+		    i0 = (i0&(~i))|((0x20000)>>j0);
+		}
+	    }
+	} else if (j0>51) {
+	    if(j0==0x400) return x+x;	/* inf or NaN */
+	    else return x;		/* x is integral */
+	} else {
+	    i = ((unsigned)(0xffffffff))>>(j0-20);
+	    if((i1&i)==0) return x;	/* x is integral */
+	    i>>=1;
+	    if((i1&i)!=0) i1 = (i1&(~i))|((0x40000000)>>(j0-20));
+	}
+	
+	SET_HIGH_WORD(x,i0);
+	SET_LOW_WORD(x,i1);
+	w = TWO52[sx]+x;
+	return w-TWO52[sx];
+}
+
+/****************************************************************************/
+
+#endif /* PPC_FLOATING_POINT_SUPPORT */
+
+/****************************************************************************/
+
+#endif /* FLOATING_POINT_SUPPORT */
